[package]
name = "tokio-quiche"
version = "0.19.0"
description = "Asynchronous wrapper around quiche"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = ["quic", "http3", "tokio"]
categories = { workspace = true }
readme = "README.md"
rust-version = "1.88"

[features]
default = ["qlog-gzip", "qlog-zstd"]

# Forwarded quiche features for re-exports
fuzzing = ["quiche/fuzzing"]
quiche_internal = ["quiche/internal"]

# Enable extra timing instrumentation for QUIC handshakes, including protocol
# overhead and network delays.
perf-quic-listener-metrics = []

# Enable raw public key (RPK) support for QUIC handshakes.
rpk = ["boring/rpk"]

# Replaces quiche's original congestion control
# implementation with one adapted from google/quiche.
gcongestion = ["quiche/gcongestion"]
# Deprecated: zero-copy sends are now always enabled when using tokio-quiche.
# This feature is kept for backwards compatibility and only enables `gcongestion`.
zero-copy = ["gcongestion"]
# Allow client connections to provide a custom DCID when initiating a
# connection. Be aware that RFC 9000 places requirements for unpredictability and
# length on the client DCID field. Enabling this feature can be dangerous if these
# requirements are not satisfied.
custom-client-dcid = ["quiche/custom-client-dcid"]

# Deprecated: use `--cfg capture_keylogs` instead.
capture_keylogs = []

# Enable scheduling & poll duration histograms for tokio tasks.
tokio-task-metrics = []

# Enable gzip compression for QLOG output files. Forwards to the
# `qlog` crate's `gzip` feature so `QuicSettings::qlog_compression =
# QlogCompression::Gzip` is available at runtime and emits
# `.sqlog.gz` files. Pulls in `flate2` with its crate-default backend
# (consumers can override the backend by depending on `flate2`
# directly).
#
# May be combined with `qlog-zstd`; the algorithm is selected per
# connection at runtime via `QuicSettings::qlog_compression`.
qlog-gzip = ["qlog/gzip"]

# Enable zstd compression for QLOG output files. Forwards to the
# `qlog` crate's `zstd` feature so `QuicSettings::qlog_compression =
# QlogCompression::Zstd` is available at runtime and emits
# `.sqlog.zst` files. Pulls in the `zstd` crate, which links against
# `zstd-sys` (a C dependency).
#
# May be combined with `qlog-gzip`; the algorithm is selected per
# connection at runtime via `QuicSettings::qlog_compression`.
qlog-zstd = ["qlog/zstd"]

[lints.rust]
# capture_keylogs: enable SSLKEYLOGFILE capturing for QUIC connections.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(capture_keylogs)'] }

[dependencies]
anyhow = { workspace = true }
boring = { workspace = true }
bytes = { workspace = true }
crossbeam = { workspace = true, default-features = false }
datagram-socket = { workspace = true }
foundations = { workspace = true, default-features = false, features = [
  "server-client-common-default",
] }
futures = { workspace = true }
futures-util = { workspace = true }
ipnetwork = { workspace = true }
log = { workspace = true }
octets = { workspace = true }
pin-project = { workspace = true }
qlog = { workspace = true, features = ["foundations"] }
quiche = { workspace = true, features = ["boringssl-boring-crate", "qlog"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_with = { workspace = true }
slog-scope = { workspace = true }
slog-stdlog = { workspace = true }
smallvec = { workspace = true }
task-killswitch = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-stream = { workspace = true, features = ["net", "io-util"] }
tokio-util = { workspace = true, features = [
  "compat",
  "time",
  "codec",
  "io",
  "rt",
] }
url = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
clap = { version = "4.5.40", features = ["derive"] }
env_logger = { workspace = true }
h3i = { workspace = true }
http = "1"
http-body = "1"
http-body-util = "0.1"
parking_lot = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["time", "test-util", "rt-multi-thread"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }
nix = { workspace = true, features = ["signal"] }
