[package]
name = "quiche_apps"
version = "0.1.0"
authors = ["Lucas Pardue <lucaspardue.24.7@gmail.com>"]
edition = "2018"
publish = false

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["quiche/fuzzing"]

# Enable qlog support.
qlog = ["quiche/qlog"]

# Build against the boring-sys crate instead of the vendored BoringSSL.
boring-sys = ["quiche/boring-sys"]

default = ["qlog"]

[dependencies]
docopt = "1"
env_logger = "0.6"
mio = "0.6"
nix = "0.21"
url = "1"
log = "0.4"
ring = "0.16"
quiche = { path = "../../" }

[profile.release]
debug = true

[lib]
crate-type = ["lib"]
